--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
 
             <hr>
 
+            <h2>Skills</h2>
+            <ul>
+                <li>Customer Service</li>
+                <li>Microsoft Office Suite</li>
+                <li>JavaScript</li>
+                <li>Organizational Skills</li>
+                <li>React</li>
+            </ul>
+            <hr>
+            <h2>Awards and Certifications</h2>
+            <ul>
+                <li>A+ Certification</li>
+            </ul>
+            <hr>
             
-        
 </body>
 </html>
