Added a contact file and hyperlinked/used an anchor tag to hyperlink it from the index file + Created a Hobbies file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                 <li>A+ Certification</li>
             </ul>
             <hr>
-            
+            <h2>Other</h2>
+            <a href="contact.html">Contact Me</a>
+            <a></a>
 </body>
 </html>
