Added an anchor tag to the Hobbies file + wrapped the table rows inside of a table to perpendicular

--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h2>My Hobbies</h2>
-    <p></p>
+    <ol>
+        <li>Playing Chess</li>
+        <li>Hiking</li>
+        <li>Writing</li>
+    </ol>
+    <hr>
 </body>
 </html>
